# Drone-Mapping

./: README.md  drone_mapping.launch  drone_mapping.world  install.sh
assets/: CMakeLists.txt  package.xml
assets/launch/: mavros_px4_sitl_laser.launch
assets/models/iris_laser/: iris_laser.sdf  model.config
assets/models/kinect/: model.sdf
assets/models/simple_labyrinth/: model.config  model.sdf
drone_controller/resources/: perspective.ui
drone_controller/widget/: joystick.py  rospyHandler.py  rospy_handler.py  roverHandler.py  rover_handler.py  topicService.py  widget.py
drone_slam/: CMakeLists.txt  package.xml
drone_slam/include/drone_slam/: pcl_icp.h
drone_slam/launch/: drone_slam.launch
drone_slam/models/dslam_depth_camera/: model.config  model.sdf
drone_slam/models/dslam_iris/: dslam_iris.sdf  model.config
drone_slam/models/dslam_iris_depth_camera_laser/: dslam_iris_depth_camera_laser.sdf  model.config
drone_slam/models/dslam_simple_labyrinth/: model.config  model.sdf
drone_slam/models/dslam_velodyne_laser/: model.config  model.sdf
drone_slam/models/iris_depth_camera_rplidar/: iris_depth_camera_rplidar.sdf  model.config
drone_slam/models/rplidar/: model.sdf
drone_slam/models/simple_labyrinth_10/: model.config  model.sdf
drone_slam/rviz/: config.rviz
drone_slam/src/: laser_test.cpp  pcl_icp.cpp  pcl_icp_node.cpp
drone_slam/worlds/: drone_slam.world
src/laser_to_pointcloud/: laser_geometry.py  main.py
