<?xml version="1.0"?>
<package format="3">
    <name>assets</name>
    <version>0.0.1</version>
    <description>The assets package</description>
    <maintainer email="arkajbasak1211@gmail.com">Arka</maintainer>
    <author email="arkajbasak1211@gmail.com">Arka</author>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>